2008-09-26  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.glade:
	* plugins/dashboard/dashboard.py:
	    add an alignment to center the widgets in the window


2008-09-26  Ben Van Mechelen  <me@benvm.be>

	* plugins/freeze_frame_data/freeze_frame_data.glade:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	    gui improvements and addition of O2 sensors
	* plugins/live_data/live_data.glade:
	    gui improvements
	    

2008-09-25  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.py:
	    make MIL widget and trouble codes active by default
	

2008-09-25  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.glade:
	    gui improvements
	    

2008-09-25  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py:
	* plugins/o2_sensors/o2_sensors.glade:
	    Add O2 sensors
	    

2008-09-24  Ben Van Mechelen  <me@benvm.be>

	* garmon/scheduler.py:
	    only update a sensor when we are self.working
	    

2008-09-23  Ben Van Mechelen  <me@benvm.be>

	* plugins/o2_sensors/o2_sensors.py:
	    correct copyright notice
	    

2008-09-23  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	    Add an update-name property
	* plugins/freeze_frame_data/freeze_frame_data.py:
	    use SensorView widget instead of FreezeFrameDataView
    

2008-09-20  Ben Van Mechelen  <me@benvm.be>

	* plugins/o2_sensors/o2_sensors.py:
	    corrected copyright notice
	    

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* scripts/elm_sim.py:
	    support pids above 0x20
	

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	* plugins/Makefile.am:
	    Make sure the new O2 Sensors plugin gets build


2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* plugins/dtc_reader/dtc_reader.py:
	    remove the BITS column from the treeview
	

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py: