@@ -1,3 +1,10 @@
+2008-10-01  Ben Van Mechelen  <me@benvm.be>
+
+	* plugins/dashboard/dashboard.py:
+	    Inherit from EventBox so we can catch events and
+	    (de)activate gauges
+	    
+
 2008-09-26  Ben Van Mechelen  <me@benvm.be>
 
 	* plugins/dashboard/dashboard.glade:
